<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Player 1 Turn"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/game_board"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_settings"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_settings"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:id="@+id/game_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/text_status"
        app:layout_constraintBottom_toTopOf="@id/button_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button style="@style/GameBoardButton" android:id="@+id/button_00" android:onClick="onBoardClick"/>
        <Button style="@style/GameBoardButton" android:id="@+id/button_01" android:onClick="onBoardClick"/>
        <Button style="@style/GameBoardButton" android:id="@+id/button_02" android:onClick="onBoardClick"/>

        <Button style="@style/GameBoardButton" android:id="@+id/button_10" android:onClick="onBoardClick"/>
        <Button style="@style/GameBoardButton" android:id="@+id/button_11" android:onClick="onBoardClick"/>
        <Button style="@style/GameBoardButton" android:id="@+id/button_12" android:onClick="onBoardClick"/>

        <Button style="@style/GameBoardButton" android:id="@+id/button_20" android:onClick="onBoardClick"/>
        <Button style="@style/GameBoardButton" android:id="@+id/button_21" android:onClick="onBoardClick"/>
        <Button style="@style/GameBoardButton" android:id="@+id/button_22" android:onClick="onBoardClick"/>

    </GridLayout>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_game"
        android:onClick="resetGame"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/game_board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/result_scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#99000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/result_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/popup_background"
        android:elevation="10dp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp">

        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player Wins!"
            android:textStyle="bold"
            android:textSize="22sp"
            android:paddingTop="4dp" />

        <TextView
            android:id="@+id/result_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Great finish!"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/button_play_again"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play_again" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_close_popup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>